# pentefino

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  cliff.toml  pentefino.py  pentefino.sh  pentefino.sh.deprecated  pyproject.toml
.github/workflows/: ci.yml  release.yml
pentefino/: __init__.py  ai.py  formatter.py  runner.py
scripts/: bump.sh
