[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pentefino"
version = "0.2.0"
description = "OSINT, recon, performance audit & visual critique scanner for websites and Instagram profiles"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
]
keywords = ["osint", "recon", "performance", "lighthouse", "instagram", "security", "dns"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/Klimadev/pentefino"
Repository = "https://github.com/Klimadev/pentefino"
Issues = "https://github.com/Klimadev/pentefino/issues"

[project.optional-dependencies]
dev = ["ruff>=0.5", "pre-commit>=3"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
